--- a/webapp/composer.json
+++ b/webapp/composer.json
@@ -5,6 +5,7 @@
     "phpunit/phpunit": "4.7.*",
     "phpunit/phpunit-selenium": "1.4.*",
     "silex/silex": "~1.3",
-    "twig/twig": ">=1.8,<2.0-dev"
+    "twig/twig": ">=1.8,<2.0-dev",
+    "symfony/twig-bridge": "~2.3"
   }
 }
